# NAC

./: CompileTest.py  MEP_compiler.py  MEP_interpreter.py  NAC.py  NAC_info.py  NAC_kernels.py  NAC_optimizer.py  NAC_reconstructor.py  NAC_run.py  NACmodels_test.py  README.md  Readme.md  TISA_tokenizer.py
ESP32_test/: CYD28_SD.cpp  CYD28_SD.h  MEP_interpreter.cpp  MEP_interpreter.h  Readme.md  TFT_eSPI_Compat.h  TISA_UCD_TABLES.h  TISA_VM.cpp  TISA_VM.h  UnicodeTables.py  main.cpp.ino  op_kernels.cpp  op_kernels.h  sdkconfig.release  types.h
FPGA/: NAC_Artix_Wrapper.v  NAC_FPGA_Compiler.py  NAC_Processor_Core.v  NAC_SD_Loader.v  NAC_Zynq_Wrapper.v  Readme.md  mem.py  nac_alu_core.v  nac_byte_fetcher.v  nac_defines.vh  nac_erf_lut.mem  nac_gelu_lut.mem  nac_hw_defines.vh  nac_processor_top.v  nac_tanh_lut.mem
FPGA/Zynq_XCZU2CG/: NAC_AXILite_Slave.v  mem.py  nac_alu_core.v  nac_axi_master_adapter.v  nac_byte_fetcher.v  nac_defines.vh  nac_hw_defines.vh  nac_processor_top.v  nac_stream_prefetcher.v
Tools/: NAC_graph.py  NAC_info.py  NAC_reconstructor.py  NAC_weights.py  Readme.md
Verilog/: README.md  Readme.md
Verilog/docs/: COMPLIANCE.md  NAC-Core_ARCH.md  NAC-Core_ARCH_RU.md
Verilog/rtl/: nac_abcd_decoder.v  nac_activation_rle_codec.v  nac_addr_gen.v  nac_bank_allocator.v  nac_bfp_microscale_decode.v  nac_broadcast_mux.v  nac_codec_dsp_pipeline.v  nac_config.vh  nac_core.v  nac_csr_bank.v  nac_defs.vh  nac_descriptor.vh  nac_dma_manager.v  nac_dsp_pipeline.v  nac_ecc_secded.v  nac_header_parser.v  nac_instruction_cache.v  nac_kernel_sequencer.v  nac_mac_array.v  nac_mep_packetizer.v  nac_mep_vm.v  nac_mmap_engine.v  nac_model_lifecycle.v  nac_op_dispatch.v  nac_op_table.v  nac_orch_fsm.v  nac_palette_decode.v  nac_perm_table.v  nac_ping_pong_ctrl.v  nac_reduction_tree.v  nac_result_table.v  nac_scalar_alu.v  nac_scratchpad.v  nac_sfu.v  nac_soc_top.v  nac_structured_sparsity_decode.v  nac_systolic_array.v  nac_tensor_codec_pipeline.v  nac_tisa_byte_map.v  nac_tisa_packetizer.v  (+4 more)
Verilog/scripts/: run_sim.ps1
Verilog/tb/: nac_abcd_decoder_tb.v  nac_addr_gen_tb.v  nac_bank_allocator_tb.v  nac_codec_dsp_pipeline_tb.v  nac_compression_primitives_tb.v  nac_core_control_flow_tb.v  nac_core_load_run_tb.v  nac_core_mmap_backpressure_tb.v  nac_dma_manager_tb.v  nac_dsp_pipeline_tb.v  nac_ecc_secded_tb.v  (+16 more)
cpp/: CMakeLists.txt  MEP_interpreter.cpp  MEP_interpreter.h  NacFile.cpp  NacFile.h  TISA_UCD_TABLES.h  TISA_VM.cpp  TISA_VM.h  build_windows.bat  main.cpp  op_kernels.cpp  op_kernels.h  platform.cpp  platform.h  types.h
model_knowledge_base/: compressed_signatures.json  registry.json
test/: CompileTest.py  NACmodels_test.py  Readme.md  imagenet_classes.json
